--- a/hack/k8s/manifests/sensor-controller-deployment.yaml
+++ b/hack/k8s/manifests/sensor-controller-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: argo-events-sa
       containers:
       - name: sensor-controller
-        image: argoproj/sensor-controller
+        image: argoproj/sensor-controller:v0.10
         imagePullPolicy: Always
         env:
           - name: SENSOR_NAMESPACE
